Add system installer wrapper for saving attribute info

--- a/Runtime/SmokyOoOwizard.InstallerGenerator2.Runtime.asmdef
+++ b/Runtime/SmokyOoOwizard.InstallerGenerator2.Runtime.asmdef
@@ -1,10 +1,8 @@
 {
     "name": "InstallerGenerator2.Runtime",
-    "rootNamespace": "Entitas.InstallerGenerator2",
+    "rootNamespace": "",
     "references": [],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
