--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "com.smokyooowizard.installergenerator2",
+  "name": "com.smokyooowizard.installergenerator",
   "version": "1.0.0",
-  "displayName": "Entitas.InstallerGenerator2",
+  "displayName": "Entitas.InstallerGenerator",
   "unity": "2019.1",
   "author": {
     "name": "Smoky Wizard",
     "email": "smoky-santa-claus@yandex.ru"
-  },
-  "dependencies": {
-	  "com.svermeulen.extenject": "9.2.0-stcf3"
   }
 }
